cyclonedds-macros/tests/compilation-failure/topicable_enum.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/compilation-failure/topicable_enum.rs:3:10
  |
3 | #[derive(Topicable)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Topicable` (in Nightly builds, run with -Z macro-backtrace for more info)
